# paint

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README-CZ.md  README.md  flake.nix  rustfmt.toml  shell.nix
src/: gui.rs  helpers.rs  main.rs  renderer.rs
src/shaders/: compute.wgsl  render.wgsl
