# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "paint"
version = "0.1.0"
authors = ["Antonín Horkel"]
edition = "2024"
description = "GPU accelerated paint app in Rust with WGPU and egui"
readme = "README.md"
repository = "https://github.com/AntoninHorkel/paint"
license = "MIT OR Apache-2.0"
keywords = ["paint", "wgpu"]
categories = ["graphics", "rendering"] # https://crates.io/category_slugs
exclude = ["target/", "result/"]

[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
# codegen-units = 16
rpath = false

[profile.release]
opt-level = 3
debug = false
strip = "debuginfo"
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = true
codegen-units = 1 # This supposedly enables more optimizations.
rpath = false

[dependencies]
bytemuck = "1.22.0"
egui = "0.31.1"
egui-wgpu = { version = "0.31.1", default-features = false, features = ["winit"] }
egui-winit = { version = "0.31.1", default-features = false }
egui_extras = { version = "0.31.1", default-features = false, features = ["svg"] }
env_logger = "0.11.8"
num-traits = "0.2.19"
pollster = "0.4.0"
smallvec = "1.15.0"
thiserror = "2.0.12"
ultraviolet = { version = "0.9.2", default-features = false, features = ["bytemuck", "int"] }
# wgpu = { version = "25.0.0", default-features = false, features = ["metal", "vulkan", "webgl", "webgpu", "wgsl"] }
wgpu = { version = "24.0.0", default-features = false,  features = ["metal", "webgl", "webgpu", "wgsl"] }
# winit = "0.30.9"
winit = "0.30.7"

# https://doc.rust-lang.org/rustc/lints/listing/index.html
# TODO: More lints
[lints.rust]
deprecated-safe = "deny"
future-incompatible = "deny"
keyword-idents = "deny"
let-underscore = "deny"
nonstandard-style = "deny"
refining-impl-trait = "deny"
rust-2018-compatibility = "deny"
rust-2018-idioms = "deny"
rust-2021-compatibility = "deny"
rust-2024-compatibility = "deny"
unsafe_code = "deny"
# unused = "warn"
warnings = "warn"

# https://rust-lang.github.io/rust-clippy/stable/index.html
[lints.clippy]
cargo = { level = "deny", priority = -1 }
multiple_crate_versions = "warn" # expect
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cognitive_complexity = "warn"
pedantic = { level = "deny", priority = -1 }
cast_possible_truncation = "warn" # expect
cast_possible_wrap = "warn" # expect
cast_precision_loss = "warn" # expect
cast_sign_loss = "warn" # expect
match_wildcard_for_single_variants = "allow"
similar-names = "warn" # expect
struct-excessive-bools = "warn" # expect
too_many_lines = "warn"
perf = { level = "deny", priority = -1 }
# TODO: Add more restrictions
restriction = { level = "allow", priority = -1 }
absolute_paths = "warn"
print_stderr = "warn"
print_stdout = "warn"
unwrap_used = "warn"
style = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
